--- a/www/index.html
+++ b/www/index.html
@@ -202,6 +202,26 @@
                                         <div class="col-sm-12 col-xs-12">
                                             <div class="form-group">
                                                 <label for="">
+                                                    <strong>TPM:</strong>
+                                                </label>
+                                                <select id="selectTPM" class="form-control"></select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12 col-xs-12">
+                                            <div class="form-group">
+                                                <label for="">
+                                                    <strong>Material Handler:</strong>
+                                                </label>
+                                                <select id="selectMaterialHandler" class="form-control"></select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12 col-xs-12">
+                                            <div class="form-group">
+                                                <label for="">
                                                     <strong>AUDIT CHECK LIST:</strong>
                                                 </label>
                                                 <div id="containerAuditChkListt">
